--- a/odd-even-layout.css
+++ b/odd-even-layout.css
@@ -1,42 +1,44 @@
-main {
-    margin: 0;
-    padding: 0;
-}
-header {
-    grid-area: header;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: minmax(300px, 350px) auto;
-    grid-template-areas: 
-    "title navbar";
-    padding: .5rem 1rem;
-}
-.odd, .even {
-    padding: 2rem 3rem;
-}
-.odd {
-    background-color: var(--shade1-light);
-}
-.even {
-    background-color: var(--shade2-light);
-}
-.odd div, .even div {
-    width: 92%;
-    max-width: 50rem;
-    margin: 0 auto;
-}
-section#header {
-    grid-area: title;
-}
-nav#global-nav {
-    grid-area: navbar;
-}
-article.page {
-    grid-area: article;
-    padding: 0;
-    margin: 0;
-}
-footer {
-    grid-area: footer;
-    padding:.5rem 1rem;
+@media screen and (min-width: 960px) {
+    main {
+        margin: 0;
+        padding: 0;
+    }
+    header {
+        grid-area: header;
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: minmax(300px, 350px) auto;
+        grid-template-areas: 
+        "title navbar";
+        padding: .5rem 1rem;
+    }
+    .odd, .even {
+        padding: 2rem 3rem;
+    }
+    .odd {
+        background-color: var(--shade1-light);
+    }
+    .even {
+        background-color: var(--shade2-light);
+    }
+    .odd div, .even div {
+        width: 92%;
+        max-width: 50rem;
+        margin: 0 auto;
+    }
+    section#header {
+        grid-area: title;
+    }
+    nav#global-nav {
+        grid-area: navbar;
+    }
+    article.page {
+        grid-area: article;
+        padding: 0;
+        margin: 0;
+    }
+    footer {
+        grid-area: footer;
+        padding:.5rem 1rem;
+    }
 }
