--- a/flex-only.css
+++ b/flex-only.css
@@ -17,7 +17,9 @@ nav#global-nav {
 }
 article.page {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 50rem;
+
 }
 footer {
     padding:.5rem 1rem;
